# olediary

./: .gitignore  Cargo.toml  README.md
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/utils/: clap.rs
